# MY-RIAS-AII

./: Ads.txt  main.py  pyproject.toml
templates/: index.html  login.html
