[project]
name = "python-template"
version = "0.1.0"
description = ""
project.authors = [{ name = "Shido", email = "shidoitsuka931@gmail.com" }]
requires-python = ">=3.11,<4.0"
dependencies = [
    "flask-cors>=6.0.1",
    "flask>=3.1.1",
    "werkzeug>=3.1.3",
    "flask-session>=0.8.0",
    "requests>=2.32.4",
]
